--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
             <button onclick="tambahBaris('KELUAR')" style="background:#d9534f; color:#fff;">📤 TAMBAH PENGELUARAN</button>
             <button id="saveBtnManual" onclick="saveData()" style="background:#007bff; color:#fff;">💾 SIMPAN DATA</button>
             <button id="listVisitorBtn" class="warning" onclick="openPengunjung()">👀 DAFTAR PENGUNJUNG</button>
+            <button id="listDeviceBtn" style="background:#673AB7; color:#fff;" onclick="openDaftarPerangkat()">📱 DAFTAR PERANGKAT</button>
             <button onclick="downloadBackup()" style="background:#6c757d; color:#fff;">📥 BACKUP DATABASE</button>
             <button onclick="document.getElementById('fileRestore').click()" style="background:#6c757d; color:#fff;">📤 RESTORE DATABASE</button>
             <input type="file" id="fileRestore" style="display:none" onchange="uploadBackup(event)">
@@ -1091,9 +1092,50 @@ observer.observe(document.body, {
     childList: true,
     subtree: true
 });
+window.openDaftarPerangkat = () => {
+    const tabel = document.getElementById('listPerangkatTabel');
+    tabel.innerHTML = '<tr><td colspan="3" style="text-align:center; padding:20px;">Mengunduh data perangkat...</td></tr>';
+    document.getElementById('modalPerangkat').style.display = 'flex';
+
+    db.ref('riwayat_masuk').once('value', (snapshot) => {
+        tabel.innerHTML = '';
+        const data = snapshot.val();
+        if (!data) {
+            tabel.innerHTML = '<tr><td colspan="3" style="text-align:center; padding:20px;">Tidak ada data ditemukan.</td></tr>';
+            return;
+        }
+
+        Object.keys(data).reverse().forEach(key => {
+            const d = data[key];
+            const row = `
+                <tr style="border-bottom:1px solid #ddd;">
+                    <td style="padding:10px;"><b>${d.nama || 'Anonim'}</b><br><small>${d.blok || '-'}</small></td>
+                    <td style="padding:10px; font-size:0.75rem;">
+                        <b>OS:</b> ${d.os || '-'}<br>
+                        <b>ID:</b> <span style="color:blue;">${d.hwid || 'Legacy'}</span>
+                    </td>
+                    <td style="padding:10px; text-align:center;">
+                        <button onclick="hapusPerangkat('${key}')" style="background:#ff4444; color:#fff; border:none; padding:5px 10px; border-radius:4px; cursor:pointer;">HAPUS</button>
+                    </td>
+                </tr>`;
+            tabel.innerHTML += row;
+        });
+    });
+};
+
+window.hapusPerangkat = (key) => {
+    if (confirm("Tuan, yakin ingin mencabut izin akses perangkat ini?")) {
+        db.ref('riwayat_masuk/' + key).remove()
+            .then(() => { 
+                alert("Akses perangkat berhasil dimusnahkan!");
+                openDaftarPerangkat(); 
+            });
+    }
+};
 </script>
 </body>
 </html>
+
 
 
 
