--- a/index.html
+++ b/index.html
@@ -1200,6 +1200,24 @@ window.openDaftarPerangkat = () => {
     tabel.innerHTML = '<tr><td colspan="3" style="text-align:center; padding:20px;">🕵️ Sedang sinkronisasi...</td></tr>';
     document.getElementById('modalPerangkat').style.display = 'flex';
 
+    const merekWarga = {
+        "RIZAL": "REDMI",
+        "ROMI": "ESIA",
+        "TRI": "XIAOMI",
+        "ANIS": "OPPO",
+        "FAJAR DJAKA": "VIVAN",
+        "FAJAR SHANUM": ["INFINIX HOT 12 PLAY", "ADVAN TBOOK", "APPLE IPHONE X", "SAMSUNG A06", "INFINIX HOT 9 PLAY", "POCO C71"],
+        "AGUS": "BLACKBERRY",
+        "LUKMAN": "POCO",
+        "IRAWAN": "NOKIA",
+        "RIAN": "SAMSUNG",
+        "MULYADIE": "SONY",
+        "HELDI": "ASUS",
+        "HILMAN": "HUAWEI",
+        "NANO": "SMARTFREN",
+        "TEGUH": "VIVO"
+    };
+
     db.ref('perangkat_terdaftar').once('value', (snapshot) => {
         tabel.innerHTML = '';
         const dataPerangkat = snapshot.val();
@@ -1208,16 +1226,34 @@ window.openDaftarPerangkat = () => {
             return;
         }
 
+        const counterWarga = {};
+
         Object.keys(dataPerangkat).forEach(fPrint => {
             const d = dataPerangkat[fPrint];
             const identitasLengkap = (typeof d === 'object') ? d.identitas : d;
+            
+            const bagian = identitasLengkap.split(' (');
+            const namaWarga = bagian[0].toUpperCase().trim();
+            const blokRumah = bagian[1] ? bagian[1].replace(')', '') : '-';
+
+            let alias = "PERANGKAT TIDAK DIKENAL";
+            if (merekWarga[namaWarga]) {
+                if (!counterWarga[namaWarga]) counterWarga[namaWarga] = 0;
+                counterWarga[namaWarga]++;
+
+                const urutan = counterWarga[namaWarga];
+                const merek = merekWarga[namaWarga];
+
+                if (Array.isArray(merek)) {
+                    alias = merek[urutan - 1] || "PERANGKAT TAMBAHAN";
+                } else {
+                    alias = urutan === 1 ? merek : `${merek} KE ${urutan}`;
+                }
+            }
+
             const ipWarga = d.ip || '-';
             const ispWarga = d.isp || '-';
             const osWarga = d.os || '-';
-
-            const bagian = identitasLengkap.split(' (');
-            const namaWarga = bagian[0];
-            const blokRumah = bagian[1] ? bagian[1].replace(')', '') : '-';
 
             const row = `
                 <tr style="border-bottom:1px solid #ddd;">
@@ -1227,12 +1263,13 @@ window.openDaftarPerangkat = () => {
                         <small style="color:blue;">OS: ${osWarga}</small>
                     </td>
                     <td style="padding:10px; font-size:0.75rem;">
+                        <b>ALIAS: <span style="color:#d81b60;">${alias}</span></b><br>
                         <b>IP:</b> ${ipWarga}<br>
                         <b>ISP:</b> ${ispWarga}<br>
-                        <code style="color:#d81b60;">ID: ${fPrint}</code>
+                        <code style="color:#666; font-size:0.65rem;">ID: ${fPrint}</code>
                     </td>
                     <td style="padding:10px; text-align:center;">
-                        <button onclick="hapusPerangkat('${fPrint}')" style="background:#ff4444; color:#fff; border:none; padding:8px 12px; border-radius:4px; cursor:pointer;">HAPUS</button>
+                        <button onclick="hapusPerangkat('${fPrint}')" style="background:#ff4444; color:#fff; border:none; padding:8px 12px; border-radius:4px; cursor:pointer; font-size:0.7rem;">HAPUS</button>
                     </td>
                 </tr>`;
             tabel.innerHTML += row;
@@ -1271,6 +1308,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
