--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:
 .theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a;--border:#444}
 .theme-dark #userGreeting { background: rgba(0,0,0,0.5); border-color: #444; }
 
-.theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
+.theme-blue{--bg:#D2B48C;--text:#4B2E1E;--card:#FFFDD0}
 
 #checklistModal, #usulanModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:2000; overflow-y:auto; padding:20px; box-sizing:border-box; }
 .checklist-content, .usulan-content { background:#fff; color:#000; padding:20px; border-radius:10px; max-width:980px; margin:0 auto; }
@@ -1317,6 +1317,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
