--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:
 .theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a;--border:#444}
 .theme-dark #userGreeting { background: rgba(0,0,0,0.5); border-color: #444; }
 
-.theme-blue{--bg:#D2B48C;--text:#4B2E1E;--card:#FFFDD0}
+.theme-aesthetic{--bg:#D2B48C;--text:#4B2E1E;--card:#FFFDD0}
 
 #checklistModal, #usulanModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:2000; overflow-y:auto; padding:20px; box-sizing:border-box; }
 .checklist-content, .usulan-content { background:#fff; color:#000; padding:20px; border-radius:10px; max-width:980px; margin:0 auto; }
@@ -1195,10 +1195,12 @@ function startClock() {
     }, 1000);
 }
 document.getElementById('themeBtn').onclick=()=>{
- const th=['theme-cyberpunk','theme-dark','theme-blue',''];
- let i=th.indexOf(currentTheme)+1; if(i>=th.length) i=0;
+ const th=['theme-cyberpunk','theme-dark','theme-aesthetic',''];
+ const nm=['CYBERPUNK','DARK','AESTHETIC','STANDAR'];
+ let i=th.indexOf(currentTheme)+1; if(i>=th.length) i=0;
  if(currentTheme) document.body.classList.remove(currentTheme);
  currentTheme=th[i]; if(currentTheme) document.body.classList.add(currentTheme);
+ document.getElementById('themeBtn').innerText='🎨 TEMA: '+nm[i];
 };
 document.getElementById('cetakBtn').onclick=()=>{
  toggleMenu(); window.scrollTo(0,0);
@@ -1331,6 +1333,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
